added friendrequest counter template

--- a/FriendRequestTemplate.html
+++ b/FriendRequestTemplate.html
@@ -56,3 +56,7 @@
 		<p class="list-group-item-text">Requested on {{createdAt}}</p>
 	</div>
 </template>
+
+<template name="friendRequestCounter">
+	Friend requests <span class="badge">{{numberOfFriendRequests}}</span>
+</template>
