updated to work with username instead of user profile

--- a/FriendRequestTemplate.html
+++ b/FriendRequestTemplate.html
@@ -22,11 +22,11 @@
 </template>
 
 <template name="addFriendRequestForm">
-	<h4>Add New Contact</h4>
+	<h4>Send Friend Request</h4>
 	<form class="add-friendRequest">
 		<div class="input-group col-xs-12">
-			<span class="input-group-addon" id="emailAddress">E-mail</span>
-			<input type="text" name="toUser" placeholder="Prospective colleague's email address" class="form-control" aria-describedby="taskTitle" />
+			<span class="input-group-addon" id="username">Username</span>
+			<input type="text" name="toUser" placeholder="Username" class="form-control" aria-describedby="taskTitle" />
 		</div>
         <div class="input-group col-xs-12">
         	<input type="submit" class="btn btn-info col-xs-12">
