--- a/FriendTemplate.html
+++ b/FriendTemplate.html
@@ -11,14 +11,8 @@
 <template name="friend">
 	<div class="list-group-item">
 		<span type="submit" value="Remove" class="remove-friend glyphicon glyphicon-remove pull-right text-danger"></span>
-		{{#with profile}}
-				<h4 class="list-group-item-heading">{{firstName}} {{lastName}}</h4>
-		{{/with}}
 
-		<p class="list-group-item-text">
-			{{#each emails}}
-				{{address}}
-			{{/each}}
-		</p>
+		<h4 class="list-group-item-heading">{{username}}</h4>
+
 	</div> <!--Change this to use profile instead-->
 </template>
