--- a/FriendTemplate.html
+++ b/FriendTemplate.html
@@ -43,6 +43,6 @@
     		<option value="{{_id}}">
         		{{username}}
     		</option>
-    	{{/options}}
+    	{{/each}}
     </select>
 </template>
