--- a/FriendTemplate.html
+++ b/FriendTemplate.html
@@ -18,7 +18,7 @@
 </template>
 
 <template name="selectMultipleFriends">
-	<select multiple name="members" class="form-control">
+	<select multiple name="selectMultipleFriends" class="form-control">
     	{{#each friends}}
     		<option value="{{_id}}">
         		{{username}}
@@ -28,7 +28,7 @@
 </template>
 
 <template name="selectOneFriend">
-	<select name="member" class="form-control">
+	<select name="selectOneFriend" class="form-control">
     	{{#each friends}}
     		<option value="{{_id}}">
         		{{username}}
@@ -38,7 +38,7 @@
 </template>
 
 <template name="selectOneFriendOrSelf">
-	<select name="member" class="form-control">
+	<select name="selectOneFriendOrSelf" class="form-control">
     	{{#each options}}
     		<option value="{{_id}}">
         		{{username}}
